manifests/hello-gluster/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello
  namespace: hello-gluster
spec:
  selector:
    name: hello
  ports:
  - port: 80
    targetPort: 80
    # name: http
